--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.10.0
   google_sign_in: ^6.1.5
   flutter_spinkit: ^5.2.0
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/google.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
+    - assets/images/foods/
+    - assets/images/article_pic/
+    - assets/images/splash_pic/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -78,6 +83,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Muli
+      fonts:
+        - asset: assets/fonts/muli/Muli.ttf
+        - asset: assets/fonts/muli/Muli-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/muli/Muli-Light.ttf
+          weight: 300
   # fonts:
   #   - family: Schyler
   #     fonts:
