--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.1.0
   cloud_firestore: ^4.12.1
+  flutter_rating_bar: ^4.0.1
+  camera: ^0.10.5+5
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
